--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-tree-sitter-freemarker",
   "version": "0.0.0",
-  "description": "A short description of your language package",
+  "description": "A short description of my language package",
   "keywords": [
     "language",
     "freemarker",
