--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "language-tree-sitter-freemarker",
+  "name": "language-freemarker",
   "version": "0.0.1",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
-    "tree-sitter"
+    "tree-sitter",
+    "freemarker"
   ],
   "repository": {
     "type": "git",
