--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "language-freemarker",
-  "version": "0.0.2",
+  "name": "language-tree-sitter-freemarker",
+  "version": "0.0.1",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
     "tree-sitter",
