--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-freemarker",
+  "name": "language-tree-sitter-freemarker",
   "version": "0.0.4",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
