--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-freemarker-2",
+  "name": "language-freemarker-tree-sitter",
   "version": "0.0.5",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
