--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
     "tree-sitter",
-    "freemarker"
+    "freemarker",
+    "language"
   ],
   "repository": {
     "type": "git",
