--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-freemarker-tree-sitter",
+  "name": "tree-sitter-freemarker",
   "version": "1.0.0",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
