--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-sitter-freemarker",
+  "name": "language-freemarker-ts",
   "version": "1.1.1",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
