--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsl-freemarker",
-  "version": "1.1.5",
+  "version": "1.1.4",
   "description": "This is for syntax highlighting the freemarker language.",
   "keywords": [
     "tree-sitter",
@@ -14,5 +14,8 @@
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
+  },
+  "dependencies": {
+    "tree-sitter-freemarker": "1.0.5"
   }
 }
