--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tsl-freemarker",
+  "name": "language-html",
   "main": "lib/main",
-  "version": "1.3.2",
-  "description": "This is for syntax highlighting the freemarker language.",
+  "version": "0.51.5",
+  "description": "HTML language support in Atom",
   "keywords": [
     "tree-sitter"
   ],
@@ -10,16 +10,21 @@
     "atom": "*",
     "node": "*"
   },
-  "homepage": "https://atom.io/packages/tsl-freemarker",
+  "homepage": "http://atom.github.io/language-html",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jake-Nolder/language-tree-sitter-freemarker"
+    "url": "https://github.com/atom/language-html.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Jake-Nolder/language-tree-sitter-freemarker/issues"
+    "url": "https://github.com/atom/language-html/issues"
   },
   "dependencies": {
-    "tree-sitter-freemarker": "*"
+    "atom-grammar-test": "^0.6.3",
+    "tree-sitter-html": "^0.13.2",
+    "tree-sitter-embedded-template": "^0.13.0"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.10.1"
   }
 }
