--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "language-html",
+  "name": "tsl-freemarker",
   "main": "lib/main",
-  "version": "0.52.0",
+  "version": "1.3.2",
   "description": "HTML language support in Atom",
   "keywords": [
     "tree-sitter"
@@ -10,14 +10,14 @@
     "atom": "*",
     "node": "*"
   },
-  "homepage": "http://atom.github.io/language-html",
+  "homepage": "https://github.com/Jake-Nolder/language-tree-sitter-freemarker",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/language-html.git"
+    "url": "https://github.com/Jake-Nolder/language-tree-sitter-freemarker.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/atom/language-html/issues"
+    "url": "https://github.com/Jake-Nolder/language-tree-sitter-freemarker/issues"
   },
   "dependencies": {
     "atom-grammar-test": "^0.6.3",
